tests/parser/assign-statement-expression-error.stderr
error: expected expression
 --> $DIR/assign-statement-expression-error.lox:1:5
  |
1 | x = /;
  |     ^
